--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 #####################################################
 *.sketch
 *.fig
-*.style-guide.md
+*.style-guide
 
 # Avoid accidental XD upload if you convert the design file
 ###############################################
